1. update both slack/adaptive cards templates to fit it's own schemas 3. bring your options

--- a/resources.yaml
+++ b/resources.yaml
@@ -1,55 +1,101 @@
 components:
-  - name: label
+  - name: text
     slack: |
       {
-        "type": "section",
-        "text": {
-          "type": "plain_text",
-          "text": "${description}",
-          "emoji": true
-        }
+        "type": "textarea",
+        "name": "${name}",
+        "label": "${label}",
+        "value": "${value}",
+        "hint": "${placeholder}"
       }
     adaptiveCards: |
       {
           "type": "TextBlock",
-          "text": "${description}",
-          "wrap": true
-      }
-  - name: field
-    slack: |
-      {
-        "type": "input",
-        "block_id": "input123",
-        "label": {
-          "type": "plain_text",
-          "text": "Label of input"
-        },
-        "element": {
-          "type": "plain_text_input",
-          "action_id": "plain_input",
-          "placeholder": {
-            "type": "plain_text",
-            "text": "${value}"
-          }
-        }
-      }
-    adaptiveCards: |
-      {
-          "type": "TextBlock",
-          "text": "New TextBlock",
+          "text": "${label}",
           "wrap": true
       },
       {
           "type": "Input.Text",
-          "placeholder": "${placeholder}",
-          "value": "${value}"
+          "id": "${name}",
+          "value": "${value}",
+          "placeholder": "${placeholder}"
       }
+  - name: textarea
+    slack: |
+      {
+        "type": "text",
+        "name": "${name}",
+        "label": "${label}",
+        "value": "${value}",
+        "hint": "${placeholder}"
+      }
+    adaptiveCards: |
+      {
+          "type": "TextBlock",
+          "text": "${label}",
+          "wrap": true
+      },
+      {
+          "type": "Input.Text",
+          "isMultiline": true,
+          "id": "${name}",
+          "value": "${value}",
+          "placeholder": "${placeholder}"
+      }      
+  - name: choose
+    slack: |
+      {
+        "type": "select",
+        "name": "${name}",
+        "label": "${label}",
+        "value": "${value}",
+        "options": ${select:options},
+        "hint": "${placeholder}"
+      }
+    adaptiveCards: |
+      {
+          "type": "TextBlock",
+          "text": "${label}",
+          "wrap": true
+      },
+      {
+          "type": "Input.ChoiceSet",
+          "id": "${name}",
+          "value": "${value}",
+          "choices": ${select:options},
+          "placeholder": "${placeholder}"
+      }
+
 forms:
   - name: CREATEVM_WIN_STRESSALL_ELEMENTS
     layouts:
-    - use: label
-      description: test
-    - use: field
+    - use: text
+      label: Input text
       name: CREATEVM_WIN_STRESSALL_ELEMENTS
       value: "20.0.0.1337"
       placeholder: "20.0.0.1337"
+    - use: textarea
+      label: Input textarea
+      name: CREATEVM_WIN_STRESSALL_ELEMENTS_1
+      value: ""
+      placeholder: "Input any comment here..."
+    - use: choose
+      name: CREATEVM_WIN_STRESSALL_ELEMENTS_2
+      label: Select Windows server version
+      value: "1"
+      placeholder: "Windows ..."
+      options:
+      - text: Windows 2018
+        value: "1"
+      - text: Windows 2020
+        value: "2"
+    - use: choose
+      name: CREATEVM_WIN_STRESSALL_ELEMENTS_3
+      label: Select Virtual Machine SKU
+      value: Standard_D2v3
+      placeholder: "Windows ..."
+      options:
+      - text: Standard D2 v3
+        value: Standard_D2v3
+      - text: Standard B2ms
+        value: Standard_B2ms
